--- a/src/Components/Styles/WelcomeHeader.scss
+++ b/src/Components/Styles/WelcomeHeader.scss
@@ -1,39 +1,46 @@
+@import './Variables.scss';
 header {
     display: flex;
-    padding: 100px 75px;
-    gap: 25px;
+    flex-direction: column;
+    padding: 50px 75px 100px;
+    gap: 10px;
+    align-items: center;
+    text-align: center;
+    overflow: hidden;
 }
 
 .wavingHand {
-    font-size: 65px;
+    font-size: 75px;
     animation: wave 4s infinite;
-    color: #AE8646;
-    margin: 25px 0 0 0;
+    color: $gold;
 }
 
 .welcome {
     display: flex;
     flex-direction: column;
+    gap: 10px;
 }
 
 h1 {
     color: #fff;
-    font-size: 100px;
+    font-size: 115px;
     margin: 0;
     padding: 0;
-    line-height: 80px;
+    line-height: 95px;
 }
 
 h2 {
-    color: #AE8646;
-    font-size: 48px;
+    color: $gold;
+    font-size: 55px;
     margin: 0;
     padding: 0;
+    line-height: 45px;
 }
 
 h3 {
     font-size: 24px;
     font-weight: normal;
+    margin: 0;
 }
 
 h3 span {
@@ -42,6 +49,7 @@ h3 span {
 
 .socialLinks {
     display: flex;
+    justify-content: center;
     gap: 10px;
 }
 
@@ -51,7 +59,7 @@ h3 span {
 }
 
 .socialIcon {
-    color: #AE8646;
+    color: $gold;
     margin-right: 5px;
     font-size: 20px;
 }
@@ -66,6 +74,71 @@ a:visited {
 a:hover {
     text-decoration: underline;
 }
+
+.animatedSquares {
+    position: absolute;
+    top: 200px;
+    left: 0px;
+    z-index: -1;
+}
+
+.animatedSquares span:nth-child(even) {
+    animation: animate linear 150s infinite;
+
+}
+
+.animatedSquares:nth-child(odd) {
+    animation: animate-flipped linear 150s infinite;
+}
+
+.animatedSquares span,
+.animatedSquares span:before,
+.animatedSquares span:after {
+    position: relative;
+    display: inline-block;
+    height: 25px;
+    width: 25px;
+    background: #1a2c41;
+    margin: 0 100px;
+}
+
+.animatedSquares:nth-child(odd) span {
+    border-radius: 50%;
+}
+
+.animatedSquares span:before {
+  content: '';
+  left: 600px;
+  height: 10px; 
+  width: 10px;
+}
+
+.animatedSquares span:after  {
+  content: '';
+  top: 600px;
+  height: 15px;
+  width: 15px;
+}
+
+@keyframes animate{
+    from{
+      transform: translateY(-400px) rotate(-180deg)
+    }
+    to{
+      transform: translateY(-150%)
+        rotate(360deg)
+    }
+  }
+
+  @keyframes animate-flipped{
+    from{
+      transform: translateY(-400px) rotate(180deg)
+    }
+    to{
+      transform: translateY(-150%)
+        rotate(360deg)
+    }
+  }
 
 @keyframes wave{
     0% {
@@ -89,12 +162,10 @@ a:hover {
     }
 
     h1 {
-        font-size: 70px;
-        line-height: 35px;
+        font-size: 65px;
     }
 
     .welcome {
-        gap: 10px;
         align-items: center;
         text-align: center;
     }
@@ -106,4 +177,8 @@ a:hover {
     .socialLinks {
         justify-content: center;
     }
+
+    .animatedSquares{
+        display: none;
+      }
 }
