--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,9 @@
 @import './Components/Styles/Variables.scss';
 
 section {
-  padding: 50px 75px;
+  padding: 90px 0;
+  min-height: 60vh;
+  box-sizing: border-box;
   
   &:nth-child(odd) {
     background: #1A2B40;
@@ -12,9 +14,10 @@ section {
     align-items: center;
     width: 200px;
     gap: 10px;
-    margin: 0 auto;
+    margin: 0 auto 50px;
     font-size: 24px;
     font-weight: bold;
+    color: #fff;
 
     &:before, 
     &:after {
