--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@
 html {
   padding: 0;
   margin: 0;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 body {
@@ -13,7 +13,6 @@ body {
   margin: 0;
   font-size: 18px;
   letter-spacing: 2px;
-  overflow: hidden;
 }
 
 #root {
